tests/new_bad_arity.stderr
tests/new_bad_arity.sl:5:32: error: SL1007: expected type
